--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,14 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Dev1": "Data Source=5CG9445SKD;Initial Catalog=JobDB;Integrated Security=True;Encrypt=False;", 
+    "Dev2": "Data Source=5CG7324TYL;Initial Catalog = JobDB; Encrypt=False; Integrated Security=True"
+  }
 }
