feat: category,subcategory,search added

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Dev1": "Data Source=5CG9445SKD;Initial Catalog=JobDB;Integrated Security=True;Encrypt=False;", 
+    "Dev1": "Data Source=5CG9445SKD;Initial Catalog=JOBDB;Integrated Security=True;Encrypt=False;", 
     "Dev2": "Data Source=5CG7324TYL;Initial Catalog = JobDB; Encrypt=False; Integrated Security=True"
   }
 }
